Weight/Vertex paint with mirror and viewport clipping does not update stroke on original side #81484

Closed
opened 2020-10-06 14:21:19 +02:00 by Philipp Oeser · 9 comments
Member

System Information
Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 2.91.0 Alpha, branch: master (modified), commit date: 2020-10-06 08:38, hash: 6e7617211b
Worked: 2.79

Short description of error
Weight/Vertex paint with mirror and viewport clipping does not update stroke on original side

Exact steps for others to reproduce the error
#81484.blend

  • Open .blend
  • Do a (weightpaint in this case) stroke on the right side --> smooth, continued stoke on the right, updates on the left as well because x-mirroring is turned ON
  • (Undo)
  • {key Alt B} a clipping region in the viewport
  • Do a (weightpaint in this case) stroke again on the right side --> only first dot on the right, but updates - hidden by clipping - on the left as well because x-mirroring is turned ON
  • {key Alt B} to clear the clipping region in the viewport, see updates on the left side

Same is true for vertexpaint.

Expected: stroke should update smooth, continued on the right side while painting.

81484.webm

**System Information** Operating system: Linux-5.8.4-200.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master (modified), commit date: 2020-10-06 08:38, hash: `6e7617211b` Worked: 2.79 **Short description of error** Weight/Vertex paint with mirror and viewport clipping does not update stroke on original side **Exact steps for others to reproduce the error** [#81484.blend](https://archive.blender.org/developer/F8960805/T81484.blend) - Open .blend - Do a (weightpaint in this case) stroke on the right side --> smooth, continued stoke on the right, updates on the left as well because x-mirroring is turned ON - (Undo) - {key Alt B} a clipping region in the viewport - Do a (weightpaint in this case) stroke again on the right side --> only first dot on the right, but updates - hidden by clipping - on the left as well because x-mirroring is turned ON - {key Alt B} to clear the clipping region in the viewport, see updates on the left side Same is true for vertexpaint. Expected: stroke should update smooth, continued on the right side while painting. [81484.webm](https://archive.blender.org/developer/F8960775/81484.webm)
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-10-06 14:21:48 +02:00

This issue was referenced by 29dbe00719

This issue was referenced by 29dbe00719812925ab88030ce68509bf113520c5

Added subscriber: @patjan

Added subscriber: @patjan

Hey Philipp, I have looked a bit into this one. What I know so far, the bug seems to be unrelated to the mirroring as described. If you simply clip the upper half of the plane in the given file and start painting without mirroring, it already is buggy. You can't cross the y axis. #81484-Clipping.png
If you don't mind, I would like to work and help you with this one.

Hey Philipp, I have looked a bit into this one. What I know so far, the bug seems to be unrelated to the mirroring as described. If you simply clip the upper half of the plane in the given file and start painting without mirroring, it already is buggy. You can't cross the y axis. ![#81484-Clipping.png](https://archive.blender.org/developer/F9013779/T81484-Clipping.png) If you don't mind, I would like to work and help you with this one.
Author
Member

Hi @patjan !
Of course, help is always welcome, however I am already half way through (at least I think I am), I just had to postpone this a bit last week to do triaging mainly.
But this is on my list for today.

Regarding your additional finding: a second pair of eyes is appreciated, however I cannot really reproduce the "second" issue you were mentioning, this is what it looks like here:
T81484_b.webm

Hi @patjan ! Of course, help is always welcome, however I am already half way through (at least I think I am), I just had to postpone this a bit last week to do triaging mainly. But this is on my list for today. Regarding your additional finding: a second pair of eyes is appreciated, however I cannot really reproduce the "second" issue you were mentioning, this is what it looks like here: [T81484_b.webm](https://archive.blender.org/developer/F9015484/T81484_b.webm)

@lichtwerk: No problem, I was aware of it that's why I asked. I try to get familiar with the code base as as side project by helping fixing bugs. Anyway, I will go for another bug then. I dont know why the clipping did not work in my case. Unfortunately I can't test it right now because I am at work. I will take another look at it tonight.

@lichtwerk: No problem, I was aware of it that's why I asked. I try to get familiar with the code base as as side project by helping fixing bugs. Anyway, I will go for another bug then. I dont know why the clipping did not work in my case. Unfortunately I can't test it right now because I am at work. I will take another look at it tonight.
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Can't reproduce the issue anymore that I have described. Nice :)

Can't reproduce the issue anymore that I have described. Nice :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81484
No description provided.